# solana-core-contracts

./: .gitignore  Anchor.toml  package.json
contract/: Anchor.toml  package.json
contract/idl/: chain_signatures_project.json
contract/programs/solana-contracts-examples/: Cargo.toml
contract/programs/solana-contracts-examples/src/: constants.rs  error.rs  lib.rs
contract/programs/solana-contracts-examples/src/instructions/: erc20_vault.rs  mod.rs  process_vault.rs
contract/programs/solana-contracts-examples/src/state/: vault.rs
contract/tests/: sign-respond-erc20.ts
frontend/: .gitignore  .prettierignore  .prettierrc  README.md  eslint.config.mjs  next.config.ts  package.json  pnpm-lock.yaml  tailwind.config.ts
frontend/app/: globals.css  layout.tsx  not-found.tsx  page.tsx
frontend/components/: activity-list.tsx  address-display.tsx  app-header.tsx  balance-display.tsx  balance-section.tsx  balance-table.tsx  dapp-content.tsx  deposit-flow.tsx  empty-state-wallet.tsx  error-boundary.tsx  navigation-header.tsx  pending-deposits-table.tsx  swap-widget.tsx  unclaimed-balances.tsx  wallet-button.tsx  welcome-message.tsx  welcome-screen.tsx  withdraw-dialog.tsx
frontend/hooks/: index.ts  use-alchemy.ts  use-bridge-auto-refetch.ts  use-claim-erc20-mutation.ts  use-copy-to-clipboard.ts  use-deposit-address.ts  use-env.ts  (+19 more)
infra/: .env.example  .gitignore  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  sst.config.ts  tsconfig.json
tests/: solana-contracts-examples.ts  solana-core-contracts.ts
types/: chain_signatures_project.ts
utils/: solana.ts
(+134 files in other folders)
