[package]
name = "solana-contracts-examples"
version = "0.1.0"
description = "Created with Anchor"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "solana_core_contracts"

[features]
default = []
cpi = ["no-entrypoint"]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
idl-build = ["anchor-lang/idl-build"]


[dependencies]
anchor-lang          = { version = "0.31.1", features = ["init-if-needed"] }
omni-transaction     = { git = "https://github.com/Pessina/omni-transaction-rs", features = ["evm"] }
sha3                 = "0.10.8"
alloy-sol-types      = { version = "0.8.25", default-features = false, features = ["json"] }
alloy-json-abi       = "0.8"
alloy-primitives     = { version = "0.8.25", default-features = false }
serde_json           = { version = "1.0",    default-features = false, features = ["alloc"] }
hex                  = "0.4"
chain-signatures     = { version = "0.1.3",  features = ["cpi"] }